syntax = "proto3";

option java_multiple_files = true;
option java_package = "serviceToWriteStubs";

package ServiceToWrite;

service FileService {
  // Method to create and write to a file
  rpc WriteToFile(FileRequest) returns (FileResponse);

  // Method to read text from a file
  rpc ReadFromFile(FileReadRequest) returns (ReadFileResponse);
}

message FileRequest {
  // File name
  string file_name = 1;

  // Data to be written to the file
  string file_data = 2;
}

message FileResponse {
  // Indicates whether the operation was successful
  bool success = 1;

  // Error message in case of failure
  string error_message = 2;
}

message FileReadRequest {
  // File name
  string file_name = 1;
}

message ReadFileResponse {
  // Indicates whether the operation was successful
  bool success = 1;

  // Error message in case of failure
  string error_message = 2;

  // Text read from the file
  string file_text = 3;
}
